openshift-manifests/bluegreen-php/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bluegreen
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"bluegreen-ci:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bluegreen\")].image"}]'
    argocd.argoproj.io/sync-wave: "5"
  name: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bluegreen
    spec:
      containers:
      - name: bluegreen
        image: bluegreen-ci:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}	
        terminationMessagePath: /dev/termination-log
