openshift-manifests/bluegreen-php/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bluegreen
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: bluegreen
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bluegreen
    weight: 100
  wildcardPolicy: None
